--- a/package.json
+++ b/package.json
@@ -11,23 +11,28 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.6",
-    "@tanstack/react-query": "^4.23.0",
-    "@tanstack/react-query-devtools": "^4.23.0",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
+    "@next/mdx": "^13.1.6",
+    "@tanstack/react-query": "^4.24.6",
+    "@tanstack/react-query-devtools": "^4.24.6",
+    "@types/node": "18.13.0",
+    "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
-    "eslint": "8.33.0",
+    "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.5"
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
     "@babel/core": "^7.20.12",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/react": "^2.3.0",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-docs": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
@@ -37,11 +42,11 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
-    "@tanstack/eslint-plugin-query": "^4.24.0",
+    "@tanstack/eslint-plugin-query": "^4.24.7",
     "autoprefixer": "^10.4.13",
-    "babel-loader": "^8.3.0",
+    "babel-loader": "^9.1.2",
     "eslint-plugin-storybook": "^0.6.10",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.6"
   }
 }
