--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/eslint-plugin-query": "^4.24.7",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
