--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,8 @@
 {
+  "env": {
+    "node": true,
+    "browser": true
+  },
   "extends": [
     "next/core-web-vitals",
     "plugin:storybook/recommended"
