--- a/package.json
+++ b/package.json
@@ -11,42 +11,44 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-regular-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@next/mdx": "^14.0.1",
-    "@tanstack/react-query": "^5.7.2",
-    "@tanstack/react-query-devtools": "^5.7.4",
-    "@types/node": "20.9.0",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15",
-    "eslint": "8.53.0",
-    "eslint-config-next": "14.0.1",
-    "next": "14.0.1",
+    "@next/mdx": "^14.0.4",
+    "@tanstack/react-query": "^5.14.1",
+    "@tanstack/react-query-devtools": "^5.14.1",
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
+    "@uidotdev/usehooks": "^2.4.1",
+    "clsx": "^2.0.0",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4",
+    "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "typescript": "5.3.3"
   },
   "packageManager": "yarn@4.0.1",
   "devDependencies": {
-    "@babel/core": "^7.23.2",
+    "@babel/core": "^7.23.6",
     "@mdx-js/react": "^3.0.0",
-    "@storybook/addon-actions": "^7.5.3",
-    "@storybook/addon-docs": "^7.5.3",
-    "@storybook/addon-essentials": "^7.5.3",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/addon-links": "^7.5.3",
-    "@storybook/addon-mdx-gfm": "7.5.3",
-    "@storybook/nextjs": "7.5.3",
-    "@storybook/react": "^7.5.3",
+    "@storybook/addon-actions": "^7.6.5",
+    "@storybook/addon-docs": "^7.6.5",
+    "@storybook/addon-essentials": "^7.6.5",
+    "@storybook/addon-interactions": "^7.6.5",
+    "@storybook/addon-links": "^7.6.5",
+    "@storybook/addon-mdx-gfm": "7.6.5",
+    "@storybook/nextjs": "7.6.5",
+    "@storybook/react": "^7.6.5",
     "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "eslint-plugin-storybook": "^0.6.15",
-    "postcss": "^8.4.31",
-    "storybook": "7.5.3",
-    "tailwindcss": "^3.3.5"
+    "postcss": "^8.4.32",
+    "storybook": "7.6.5",
+    "tailwindcss": "^3.3.6"
   }
 }
