--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "gray-matter": "^4.0.3",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
