--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "gray-matter": "^4.0.3",
+    "negotiator": "^0.6.3",
     "next": "14.0.4",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-intl": "^6.5.5",
     "typescript": "5.3.3"
   },
   "packageManager": "yarn@4.0.1",
@@ -45,6 +47,7 @@
     "@storybook/react": "^7.6.5",
     "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/negotiator": "^0",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "eslint-plugin-storybook": "^0.6.15",
