--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/mdx": "^14.0.4",
-    "@tanstack/react-query": "^5.14.1",
-    "@tanstack/react-query-devtools": "^5.14.1",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
@@ -29,6 +27,7 @@
     "negotiator": "^0.6.3",
     "next": "14.0.4",
     "react": "^18.2.0",
+    "react-aria-components": "^1.0.0",
     "react-dom": "18.2.0",
     "react-intl": "^6.5.5",
     "typescript": "5.3.3"
@@ -37,22 +36,22 @@
   "devDependencies": {
     "@babel/core": "^7.23.6",
     "@mdx-js/react": "^3.0.0",
-    "@storybook/addon-actions": "^7.6.5",
-    "@storybook/addon-docs": "^7.6.5",
-    "@storybook/addon-essentials": "^7.6.5",
-    "@storybook/addon-interactions": "^7.6.5",
-    "@storybook/addon-links": "^7.6.5",
-    "@storybook/addon-mdx-gfm": "7.6.5",
-    "@storybook/nextjs": "7.6.5",
-    "@storybook/react": "^7.6.5",
+    "@storybook/addon-actions": "^7.6.6",
+    "@storybook/addon-docs": "^7.6.6",
+    "@storybook/addon-essentials": "^7.6.6",
+    "@storybook/addon-interactions": "^7.6.6",
+    "@storybook/addon-links": "^7.6.6",
+    "@storybook/addon-mdx-gfm": "7.6.6",
+    "@storybook/nextjs": "7.6.6",
+    "@storybook/react": "^7.6.6",
     "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/negotiator": "^0",
+    "@types/negotiator": "^0.6.3",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8.4.32",
-    "storybook": "7.6.5",
-    "tailwindcss": "^3.3.7"
+    "storybook": "7.6.6",
+    "tailwindcss": "^3.4.0"
   }
 }
