--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "@uidotdev/usehooks": "^2.4.1",
+    "@vercel/analytics": "^1.1.1",
     "clsx": "^2.1.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
