--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-aria-components": "^1.0.0",
     "react-dom": "18.2.0",
     "react-intl": "^6.5.5",
+    "react-markdown": "^9.0.1",
     "typescript": "5.3.3"
   },
   "packageManager": "yarn@4.0.1",
