--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.1",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "gray-matter": "^4.0.3",
