--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.1",
     "clsx": "^2.1.0",
+    "contentlayer": "^0.3.4",
     "dayjs": "^1.11.10",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "gray-matter": "^4.0.3",
     "negotiator": "^0.6.3",
     "next": "14.0.4",
+    "next-contentlayer": "^0.3.4",
     "react": "^18.2.0",
     "react-aria-components": "^1.0.1",
     "react-dom": "18.2.0",
