--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint-config-next": "14.0.4",
     "gray-matter": "^4.0.3",
     "negotiator": "^0.6.3",
-    "next": "14.0.4",
+    "next": "14.0.5-canary.59",
     "next-contentlayer": "^0.3.4",
     "react": "^18.2.0",
     "react-aria-components": "^1.0.1",
