--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,14 @@
   },
   "extends": [
     "next/core-web-vitals",
-    "plugin:storybook/recommended"
+    "plugin:storybook/recommended",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "storybook",
+    "@typescript-eslint"
   ],
   "rules": {
     "no-restricted-imports": [
