--- a/.gitignore
+++ b/.gitignore
@@ -35,17 +35,8 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# yarn
-.yarn/*
-!.yarn/cache
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-
 # Storybook
 !.storybook
 
-# contentlayer
+# Contentlayer
 .contentlayer
