--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@next/mdx": "^14.0.4",
+    "@next/mdx": "^14.1.0",
     "@react-spring/web": "^9.7.3",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "@uidotdev/usehooks": "^2.4.1",
-    "@vercel/analytics": "^1.1.1",
+    "@vercel/analytics": "^1.1.2",
     "clsx": "^2.1.0",
     "contentlayer": "^0.3.4",
     "dayjs": "^1.11.10",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.1.0",
     "gray-matter": "^4.0.3",
     "negotiator": "^0.6.3",
-    "next": "14.0.5-canary.65",
+    "next": "14.1.0",
     "next-contentlayer": "^0.3.4",
     "react": "^18.2.0",
     "react-aria-components": "^1.0.1",
@@ -42,14 +42,14 @@
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@mdx-js/react": "^3.0.0",
-    "@storybook/addon-actions": "^7.6.9",
-    "@storybook/addon-docs": "^7.6.9",
-    "@storybook/addon-essentials": "^7.6.9",
-    "@storybook/addon-interactions": "^7.6.9",
-    "@storybook/addon-links": "^7.6.9",
-    "@storybook/addon-mdx-gfm": "7.6.9",
-    "@storybook/nextjs": "7.6.9",
-    "@storybook/react": "^7.6.9",
+    "@storybook/addon-actions": "^7.6.10",
+    "@storybook/addon-docs": "^7.6.10",
+    "@storybook/addon-essentials": "^7.6.10",
+    "@storybook/addon-interactions": "^7.6.10",
+    "@storybook/addon-links": "^7.6.10",
+    "@storybook/addon-mdx-gfm": "7.6.10",
+    "@storybook/nextjs": "7.6.10",
+    "@storybook/react": "^7.6.10",
     "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/negotiator": "^0.6.3",
@@ -57,7 +57,7 @@
     "babel-loader": "^9.1.3",
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8.4.33",
-    "storybook": "7.6.9",
+    "storybook": "7.6.10",
     "tailwindcss": "^3.4.1"
   }
 }
