--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "clsx": "^2.1.0",
     "contentlayer": "^0.3.4",
     "dayjs": "^1.11.10",
-    "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "gray-matter": "^4.0.3",
     "negotiator": "^0.6.3",
@@ -36,8 +35,7 @@
     "react-aria-components": "^1.0.1",
     "react-dom": "18.2.0",
     "react-intl": "^6.6.1",
-    "react-markdown": "^9.0.1",
-    "typescript": "5.3.3"
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
@@ -53,11 +51,15 @@
     "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/negotiator": "^0.6.3",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.4.17",
     "babel-loader": "^9.1.3",
+    "eslint": "8.56.0",
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8.4.33",
     "storybook": "7.6.10",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.3.3"
   }
 }
