--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "negotiator": "^0.6.3",
     "next": "14.1.0",
     "next-contentlayer": "^0.3.4",
+    "next-intl": "^3.4.5",
     "react": "^18.2.0",
     "react-aria-components": "^1.0.1",
     "react-dom": "18.2.0",
