deps: install prettier

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@storybook/react": "^7.6.10",
     "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/typography": "^0.5.10",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/negotiator": "^0.6.3",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
@@ -59,6 +60,7 @@
     "eslint": "8.56.0",
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8.4.33",
+    "prettier": "3.2.4",
     "storybook": "7.6.10",
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3"
