--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "velite:build": "velite",
+    "velite:watch": "velite dev"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -22,8 +24,8 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "@uidotdev/usehooks": "^2.4.1",
-    "@vercel/analytics": "^1.1.2",
-    "@vercel/speed-insights": "^1.0.5",
+    "@vercel/analytics": "^1.1.3",
+    "@vercel/speed-insights": "^1.0.9",
     "clsx": "^2.1.0",
     "contentlayer": "^0.3.4",
     "dayjs": "^1.11.10",
@@ -31,38 +33,39 @@
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
     "next-contentlayer": "^0.3.4",
-    "next-intl": "^3.4.5",
+    "next-intl": "^3.7.0",
     "react": "^18.2.0",
     "react-aria-components": "^1.0.1",
     "react-dom": "18.2.0",
-    "react-intl": "^6.6.1",
+    "react-intl": "^6.6.2",
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@mdx-js/react": "^3.0.0",
-    "@storybook/addon-actions": "^7.6.10",
-    "@storybook/addon-docs": "^7.6.10",
-    "@storybook/addon-essentials": "^7.6.10",
-    "@storybook/addon-interactions": "^7.6.10",
-    "@storybook/addon-links": "^7.6.10",
+    "@babel/core": "^7.23.9",
+    "@mdx-js/react": "^3.0.1",
+    "@storybook/addon-actions": "^7.6.14",
+    "@storybook/addon-docs": "^7.6.14",
+    "@storybook/addon-essentials": "^7.6.14",
+    "@storybook/addon-interactions": "^7.6.14",
+    "@storybook/addon-links": "^7.6.14",
     "@storybook/addon-mdx-gfm": "7.6.10",
     "@storybook/nextjs": "7.6.10",
-    "@storybook/react": "^7.6.10",
+    "@storybook/react": "^7.6.14",
     "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/typography": "^0.5.10",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/negotiator": "^0.6.3",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.17",
     "babel-loader": "^9.1.3",
     "eslint": "8.56.0",
     "eslint-plugin-storybook": "^0.6.15",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.35",
     "prettier": "3.2.4",
     "storybook": "7.6.10",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "velite": "0.1.0-beta.8"
   }
 }
