--- a/package.json
+++ b/package.json
@@ -18,22 +18,23 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@next/mdx": "^14.1.0",
+    "@next/mdx": "^14.1.4",
     "@react-spring/web": "^9.7.3",
-    "@types/node": "20.11.23",
-    "@types/react": "18.2.61",
-    "@types/react-dom": "18.2.19",
+    "@storybook/test": "8.0.4",
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.69",
+    "@types/react-dom": "18.2.22",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "clsx": "^2.1.0",
     "contentlayer": "^0.3.4",
     "dayjs": "^1.11.10",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.1.4",
     "gray-matter": "^4.0.3",
-    "next": "14.1.0",
+    "next": "14.1.4",
     "next-contentlayer": "^0.3.4",
-    "next-intl": "^3.9.1",
+    "next-intl": "^3.9.5",
     "react": "^18.2.0",
     "react-aria-components": "^1.1.1",
     "react-dom": "18.2.0",
@@ -41,31 +42,30 @@
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
+    "@babel/core": "^7.24.3",
     "@mdx-js/react": "^3.0.1",
-    "@storybook/addon-actions": "^7.6.17",
-    "@storybook/addon-docs": "^7.6.17",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-mdx-gfm": "7.6.17",
-    "@storybook/nextjs": "7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/testing-library": "^0.2.2",
+    "@storybook/addon-actions": "^8.0.4",
+    "@storybook/addon-docs": "^8.0.4",
+    "@storybook/addon-essentials": "^8.0.4",
+    "@storybook/addon-interactions": "^8.0.4",
+    "@storybook/addon-links": "^8.0.4",
+    "@storybook/addon-mdx-gfm": "^8.0.4",
+    "@storybook/nextjs": "^8.0.4",
+    "@storybook/react": "^8.0.4",
     "@tailwindcss/typography": "^0.5.10",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/negotiator": "^0.6.3",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "autoprefixer": "^10.4.17",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "eslint": "8.57.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.38",
     "prettier": "3.2.5",
-    "storybook": "7.6.17",
+    "storybook": "^8.0.4",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.3.3",
-    "velite": "0.1.0-beta.11"
+    "typescript": "5.4.3",
+    "velite": "0.1.0-beta.12"
   }
 }
