--- a/package.json
+++ b/package.json
@@ -13,59 +13,59 @@
     "velite:watch": "velite dev"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@next/mdx": "^14.1.4",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/mdx": "^14.2.3",
     "@react-spring/web": "^9.7.3",
-    "@storybook/test": "8.0.4",
-    "@types/node": "20.11.30",
-    "@types/react": "18.2.69",
-    "@types/react-dom": "18.2.22",
+    "@storybook/test": "8.1.5",
+    "@types/node": "20.12.13",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@uidotdev/usehooks": "^2.4.1",
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/speed-insights": "^1.0.10",
-    "clsx": "^2.1.0",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.11",
+    "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
-    "dayjs": "^1.11.10",
-    "eslint-config-next": "14.1.4",
+    "dayjs": "^1.11.11",
+    "eslint-config-next": "14.2.3",
     "gray-matter": "^4.0.3",
-    "next": "14.1.4",
+    "next": "14.2.3",
     "next-contentlayer": "^0.3.4",
-    "next-intl": "^3.9.5",
-    "react": "^18.2.0",
-    "react-aria-components": "^1.1.1",
-    "react-dom": "18.2.0",
-    "react-intl": "^6.6.2",
+    "next-intl": "^3.14.1",
+    "react": "^18.3.1",
+    "react-aria-components": "^1.2.1",
+    "react-dom": "18.3.1",
+    "react-intl": "^6.6.8",
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.3",
+    "@babel/core": "^7.24.6",
     "@mdx-js/react": "^3.0.1",
-    "@storybook/addon-actions": "^8.0.4",
-    "@storybook/addon-docs": "^8.0.4",
-    "@storybook/addon-essentials": "^8.0.4",
-    "@storybook/addon-interactions": "^8.0.4",
-    "@storybook/addon-links": "^8.0.4",
-    "@storybook/addon-mdx-gfm": "^8.0.4",
-    "@storybook/nextjs": "^8.0.4",
-    "@storybook/react": "^8.0.4",
-    "@tailwindcss/typography": "^0.5.10",
+    "@storybook/addon-actions": "^8.1.5",
+    "@storybook/addon-docs": "^8.1.5",
+    "@storybook/addon-essentials": "^8.1.5",
+    "@storybook/addon-interactions": "^8.1.5",
+    "@storybook/addon-links": "^8.1.5",
+    "@storybook/addon-mdx-gfm": "^8.1.5",
+    "@storybook/nextjs": "^8.1.5",
+    "@storybook/react": "^8.1.5",
+    "@tailwindcss/typography": "^0.5.13",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/negotiator": "^0.6.3",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
-    "eslint": "8.57.0",
+    "eslint": "9.3.0",
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8.4.38",
     "prettier": "3.2.5",
-    "storybook": "^8.0.4",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.4.3",
-    "velite": "0.1.0-beta.12"
+    "storybook": "^8.1.5",
+    "tailwindcss": "^3.4.3",
+    "typescript": "5.4.5",
+    "velite": "0.1.0-rc.3"
   }
 }
