--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/mdx": "^14.2.3",
+    "@next/mdx": "^14.2.4",
     "@react-spring/web": "^9.7.3",
-    "@storybook/test": "8.1.5",
-    "@types/node": "20.12.13",
+    "@storybook/test": "8.1.10",
+    "@types/node": "20.14.8",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.3.1",
-    "@vercel/speed-insights": "^1.0.11",
+    "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
     "dayjs": "^1.11.11",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "14.2.4",
     "gray-matter": "^4.0.3",
-    "next": "14.2.3",
+    "next": "14.2.4",
     "next-contentlayer": "^0.3.4",
-    "next-intl": "^3.14.1",
+    "next-intl": "^3.15.2",
     "react": "^18.3.1",
     "react-aria-components": "^1.2.1",
     "react-dom": "18.3.1",
@@ -42,35 +42,35 @@
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.6",
-    "@eslint/compat": "^1.0.3",
+    "@babel/core": "^7.24.7",
+    "@eslint/compat": "^1.1.0",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.3.0",
+    "@eslint/js": "^9.5.0",
     "@mdx-js/react": "^3.0.1",
-    "@storybook/addon-actions": "^8.1.5",
-    "@storybook/addon-docs": "^8.1.5",
-    "@storybook/addon-essentials": "^8.1.5",
-    "@storybook/addon-interactions": "^8.1.5",
-    "@storybook/addon-links": "^8.1.5",
-    "@storybook/addon-mdx-gfm": "^8.1.5",
-    "@storybook/nextjs": "^8.1.5",
-    "@storybook/react": "^8.1.5",
+    "@storybook/addon-actions": "^8.1.10",
+    "@storybook/addon-docs": "^8.1.10",
+    "@storybook/addon-essentials": "^8.1.10",
+    "@storybook/addon-interactions": "^8.1.10",
+    "@storybook/addon-links": "^8.1.10",
+    "@storybook/addon-mdx-gfm": "^8.1.10",
+    "@storybook/nextjs": "^8.1.10",
+    "@storybook/react": "^8.1.10",
     "@tailwindcss/typography": "^0.5.13",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/eslint__js": "^8.42.3",
     "@types/negotiator": "^0.6.3",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
-    "eslint": "9.3.0",
+    "eslint": "9.5.0",
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8.4.38",
-    "prettier": "3.2.5",
-    "storybook": "^8.1.5",
-    "tailwindcss": "^3.4.3",
-    "typescript": "5.4.5",
-    "typescript-eslint": "^7.11.0",
-    "velite": "0.1.0-rc.3"
+    "prettier": "3.3.2",
+    "storybook": "^8.1.10",
+    "tailwindcss": "^3.4.4",
+    "typescript": "5.5.2",
+    "typescript-eslint": "^7.14.1",
+    "velite": "0.1.0"
   }
 }
