--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "velite:watch": "velite dev"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/mdx": "^14.2.4",
-    "@react-spring/web": "^9.7.3",
-    "@storybook/test": "8.1.10",
-    "@types/node": "20.14.8",
+    "@next/mdx": "^14.2.5",
+    "@react-spring/web": "^9.7.4",
+    "@storybook/test": "8.2.8",
+    "@types/node": "22.2.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@uidotdev/usehooks": "^2.4.1",
@@ -29,48 +29,49 @@
     "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
-    "dayjs": "^1.11.11",
-    "eslint-config-next": "14.2.4",
+    "dayjs": "^1.11.12",
+    "eslint-config-next": "14.2.5",
     "gray-matter": "^4.0.3",
-    "next": "14.2.4",
+    "next": "14.2.5",
     "next-contentlayer": "^0.3.4",
-    "next-intl": "^3.15.2",
+    "next-intl": "^3.17.2",
     "react": "^18.3.1",
-    "react-aria-components": "^1.2.1",
+    "react-aria-components": "^1.3.1",
     "react-dom": "18.3.1",
     "react-intl": "^6.6.8",
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@eslint/compat": "^1.1.0",
+    "@babel/core": "^7.25.2",
+    "@chromatic-com/storybook": "1",
+    "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.5.0",
+    "@eslint/js": "^9.9.0",
     "@mdx-js/react": "^3.0.1",
-    "@storybook/addon-actions": "^8.1.10",
-    "@storybook/addon-docs": "^8.1.10",
-    "@storybook/addon-essentials": "^8.1.10",
-    "@storybook/addon-interactions": "^8.1.10",
-    "@storybook/addon-links": "^8.1.10",
-    "@storybook/addon-mdx-gfm": "^8.1.10",
-    "@storybook/nextjs": "^8.1.10",
-    "@storybook/react": "^8.1.10",
-    "@tailwindcss/typography": "^0.5.13",
+    "@storybook/addon-actions": "^8.2.8",
+    "@storybook/addon-docs": "^8.2.8",
+    "@storybook/addon-essentials": "^8.2.8",
+    "@storybook/addon-interactions": "^8.2.8",
+    "@storybook/addon-links": "^8.2.8",
+    "@storybook/addon-mdx-gfm": "^8.2.8",
+    "@storybook/nextjs": "^8.2.8",
+    "@storybook/react": "^8.2.8",
+    "@tailwindcss/typography": "^0.5.14",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/eslint__js": "^8.42.3",
     "@types/negotiator": "^0.6.3",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "autoprefixer": "^10.4.19",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
-    "eslint": "9.5.0",
+    "eslint": "9.9.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "postcss": "^8.4.38",
-    "prettier": "3.3.2",
-    "storybook": "^8.1.10",
-    "tailwindcss": "^3.4.4",
-    "typescript": "5.5.2",
-    "typescript-eslint": "^7.14.1",
-    "velite": "0.1.0"
+    "postcss": "^8.4.41",
+    "prettier": "3.3.3",
+    "storybook": "^8.2.8",
+    "tailwindcss": "^3.4.9",
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.0.1",
+    "velite": "0.1.1"
   }
 }
