--- a/package.json
+++ b/package.json
@@ -18,60 +18,60 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/mdx": "^14.2.5",
+    "@next/mdx": "^14.2.13",
     "@react-spring/web": "^9.7.4",
-    "@storybook/test": "8.2.8",
-    "@types/node": "22.2.0",
-    "@types/react": "18.3.3",
+    "@storybook/test": "8.3.4",
+    "@types/node": "22.7.4",
+    "@types/react": "18.3.10",
     "@types/react-dom": "18.3.0",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
-    "dayjs": "^1.11.12",
-    "eslint-config-next": "14.2.5",
+    "dayjs": "^1.11.13",
+    "eslint-config-next": "14.2.13",
     "gray-matter": "^4.0.3",
-    "next": "14.2.5",
+    "next": "14.2.13",
     "next-contentlayer": "^0.3.4",
-    "next-intl": "^3.17.2",
+    "next-intl": "^3.20.0",
     "react": "^18.3.1",
-    "react-aria-components": "^1.3.1",
+    "react-aria-components": "^1.3.3",
     "react-dom": "18.3.1",
-    "react-intl": "^6.6.8",
+    "react-intl": "^6.7.0",
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@chromatic-com/storybook": "1",
+    "@chromatic-com/storybook": "^2.0.2",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.9.0",
+    "@eslint/js": "^9.11.1",
     "@mdx-js/react": "^3.0.1",
-    "@storybook/addon-actions": "^8.2.8",
-    "@storybook/addon-docs": "^8.2.8",
-    "@storybook/addon-essentials": "^8.2.8",
-    "@storybook/addon-interactions": "^8.2.8",
-    "@storybook/addon-links": "^8.2.8",
-    "@storybook/addon-mdx-gfm": "^8.2.8",
-    "@storybook/nextjs": "^8.2.8",
-    "@storybook/react": "^8.2.8",
-    "@tailwindcss/typography": "^0.5.14",
+    "@storybook/addon-actions": "^8.3.4",
+    "@storybook/addon-docs": "^8.3.4",
+    "@storybook/addon-essentials": "^8.3.4",
+    "@storybook/addon-interactions": "^8.3.4",
+    "@storybook/addon-links": "^8.3.4",
+    "@storybook/addon-mdx-gfm": "^8.3.4",
+    "@storybook/nextjs": "^8.3.4",
+    "@storybook/react": "^8.3.4",
+    "@tailwindcss/typography": "^0.5.15",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/eslint__js": "^8.42.3",
     "@types/negotiator": "^0.6.3",
-    "@typescript-eslint/eslint-plugin": "^8.0.1",
-    "@typescript-eslint/parser": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
     "autoprefixer": "^10.4.20",
-    "babel-loader": "^9.1.3",
-    "eslint": "9.9.0",
-    "eslint-plugin-storybook": "^0.8.0",
-    "postcss": "^8.4.41",
+    "babel-loader": "^9.2.1",
+    "eslint": "9.11.1",
+    "eslint-plugin-storybook": "^0.9.0",
+    "postcss": "^8.4.47",
     "prettier": "3.3.3",
-    "storybook": "^8.2.8",
-    "tailwindcss": "^3.4.9",
-    "typescript": "5.5.4",
-    "typescript-eslint": "^8.0.1",
+    "storybook": "^8.3.4",
+    "tailwindcss": "^3.4.13",
+    "typescript": "5.6.2",
+    "typescript-eslint": "^8.7.0",
     "velite": "0.1.1"
   }
 }
