--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -18,26 +18,26 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/mdx": "^14.2.13",
+    "@next/mdx": "15.0.0",
     "@react-spring/web": "^9.7.4",
     "@storybook/test": "8.3.4",
     "@types/node": "22.7.4",
-    "@types/react": "18.3.10",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
     "dayjs": "^1.11.13",
-    "eslint-config-next": "14.2.13",
+    "eslint-config-next": "15.0.0",
     "gray-matter": "^4.0.3",
-    "next": "14.2.13",
+    "next": "15.0.0",
     "next-contentlayer": "^0.3.4",
     "next-intl": "^3.20.0",
-    "react": "^18.3.1",
+    "react": "19.0.0-rc-65a56d0e-20241020",
     "react-aria-components": "^1.3.3",
-    "react-dom": "18.3.1",
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-intl": "^6.7.0",
     "react-markdown": "^9.0.1"
   },
@@ -73,5 +73,11 @@
     "typescript": "5.6.2",
     "typescript-eslint": "^8.7.0",
     "velite": "0.1.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "npm:types-react@19.0.0-rc.1",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    }
   }
 }
