--- a/package.json
+++ b/package.json
@@ -19,60 +19,58 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@next/mdx": "15.0.0",
-    "@react-spring/web": "^9.7.4",
-    "@storybook/test": "8.3.4",
-    "@types/node": "22.7.4",
+    "@react-spring/web": "^9.7.5",
+    "@storybook/test": "^8.3.6",
+    "@types/node": "22.7.8",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
-    "contentlayer": "^0.3.4",
     "dayjs": "^1.11.13",
     "eslint-config-next": "15.0.0",
     "gray-matter": "^4.0.3",
     "next": "15.0.0",
-    "next-contentlayer": "^0.3.4",
-    "next-intl": "^3.20.0",
+    "next-intl": "^3.22.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-aria-components": "^1.3.3",
+    "react-aria-components": "^1.4.1",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "react-intl": "^6.7.0",
+    "react-intl": "^6.8.1",
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.25.8",
     "@chromatic-com/storybook": "^2.0.2",
-    "@eslint/compat": "^1.1.1",
+    "@eslint/compat": "^1.2.1",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.11.1",
-    "@mdx-js/react": "^3.0.1",
-    "@storybook/addon-actions": "^8.3.4",
-    "@storybook/addon-docs": "^8.3.4",
-    "@storybook/addon-essentials": "^8.3.4",
-    "@storybook/addon-interactions": "^8.3.4",
-    "@storybook/addon-links": "^8.3.4",
-    "@storybook/addon-mdx-gfm": "^8.3.4",
-    "@storybook/nextjs": "^8.3.4",
-    "@storybook/react": "^8.3.4",
+    "@eslint/js": "^9.13.0",
+    "@mdx-js/react": "^3.1.0",
+    "@storybook/addon-actions": "^8.3.6",
+    "@storybook/addon-docs": "^8.3.6",
+    "@storybook/addon-essentials": "^8.3.6",
+    "@storybook/addon-interactions": "^8.3.6",
+    "@storybook/addon-links": "^8.3.6",
+    "@storybook/addon-mdx-gfm": "^8.3.6",
+    "@storybook/nextjs": "^8.3.6",
+    "@storybook/react": "^8.3.6",
     "@tailwindcss/typography": "^0.5.15",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/eslint__js": "^8.42.3",
     "@types/negotiator": "^0.6.3",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "@typescript-eslint/parser": "^8.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
-    "eslint": "9.11.1",
-    "eslint-plugin-storybook": "^0.9.0",
+    "eslint": "9.13.0",
+    "eslint-plugin-storybook": "^0.10.1",
     "postcss": "^8.4.47",
     "prettier": "3.3.3",
-    "storybook": "^8.3.4",
-    "tailwindcss": "^3.4.13",
-    "typescript": "5.6.2",
-    "typescript-eslint": "^8.7.0",
-    "velite": "0.1.1"
+    "storybook": "^8.3.6",
+    "tailwindcss": "^3.4.14",
+    "typescript": "5.6.3",
+    "typescript-eslint": "^8.11.0",
+    "velite": "0.2.0"
   },
   "pnpm": {
     "overrides": {
