--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@storybook/addon-mdx-gfm": "^8.6.12",
     "@storybook/nextjs": "^8.6.12",
     "@storybook/react": "^8.6.12",
+    "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/typography": "^0.5.16",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/negotiator": "^0.6.3",
@@ -59,7 +60,6 @@
     "@types/react-dom": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
-    "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "eslint": "9.24.0",
     "eslint-plugin-storybook": "^0.12.0",
