--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "velite:build": "velite",
-    "velite:watch": "velite dev"
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
@@ -38,6 +36,8 @@
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@chromatic-com/storybook": "^4.1.1",
+    "@content-collections/core": "^0.11.1",
+    "@content-collections/next": "^0.2.7",
     "@eslint/compat": "^1.3.2",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.35.0",
@@ -63,7 +63,7 @@
     "tailwindcss": "^4.1.13",
     "typescript": "5.9.2",
     "typescript-eslint": "^8.42.0",
-    "velite": "0.3.0"
+    "zod": "^4.1.5"
   },
   "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
 }
