refactor: update blog data handling and improve component structure

--- a/package.json
+++ b/package.json
@@ -11,59 +11,58 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^7.0.1",
-    "@fortawesome/free-brands-svg-icons": "^7.0.1",
-    "@fortawesome/free-regular-svg-icons": "^7.0.1",
-    "@fortawesome/free-solid-svg-icons": "^7.0.1",
-    "@fortawesome/react-fontawesome": "^3.0.2",
-    "@next/mdx": "15.5.2",
+    "@base-ui-components/react": "1.0.0-beta.4",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "16.0.0",
     "gray-matter": "^4.0.3",
-    "motion": "^12.23.12",
-    "next": "15.5.2",
-    "next-intl": "^4.3.6",
-    "react": "19.1.1",
-    "react-aria-components": "^1.12.1",
-    "react-dom": "19.1.1",
-    "react-intl": "^7.1.11",
+    "motion": "^12.23.24",
+    "next": "16.0.0",
+    "next-intl": "^4.3.12",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-intl": "^7.1.14",
     "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@chromatic-com/storybook": "^4.1.1",
     "@content-collections/core": "^0.11.1",
-    "@content-collections/next": "^0.2.7",
-    "@eslint/compat": "^1.3.2",
+    "@content-collections/next": "^0.2.8",
+    "@eslint/compat": "^1.4.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.35.0",
+    "@eslint/js": "^9.38.0",
     "@mdx-js/react": "^3.1.1",
-    "@storybook/addon-docs": "^9.1.5",
-    "@storybook/addon-links": "^9.1.5",
-    "@storybook/nextjs": "^9.1.5",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@tailwindcss/typography": "^0.5.16",
+    "@storybook/addon-docs": "^9.1.13",
+    "@storybook/addon-links": "^9.1.13",
+    "@storybook/nextjs": "^9.1.13",
+    "@tailwindcss/postcss": "^4.1.15",
+    "@tailwindcss/typography": "^0.5.19",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/negotiator": "^0.6.4",
-    "@types/node": "24.3.1",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
-    "@typescript-eslint/eslint-plugin": "^8.42.0",
-    "@typescript-eslint/parser": "^8.42.0",
+    "@types/node": "24.9.1",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "babel-loader": "^10.0.0",
-    "eslint": "9.35.0",
-    "eslint-plugin-storybook": "^9.1.5",
+    "eslint": "9.38.0",
+    "eslint-plugin-storybook": "^9.1.13",
     "postcss": "^8.5.6",
     "prettier": "3.6.2",
-    "storybook": "^9.1.5",
-    "tailwindcss": "^4.1.13",
-    "typescript": "5.9.2",
-    "typescript-eslint": "^8.42.0",
-    "zod": "^4.1.5"
+    "storybook": "^9.1.13",
+    "tailwindcss": "^4.1.15",
+    "typescript": "5.9.3",
+    "typescript-eslint": "^8.46.2",
+    "zod": "^4.1.12"
   },
-  "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
+  "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8"
 }
