refactor: replace Tailwind CSS components with Mantine components and update configuration

--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "biome lint .",
-    "format": "biome format --write .",
-    "lint:fix": "biome lint --apply .",
+    "lint": "biome lint",
+    "format": "biome format --write ./app ./src",
+    "lint:fix": "biome lint ./app ./src",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@base-ui-components/react": "1.0.0-beta.4",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "@mantine/core": "^8.3.5",
+    "@mantine/hooks": "^8.3.5",
+    "@mantine/notifications": "^8.3.5",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -28,6 +30,7 @@
     "motion": "^12.23.24",
     "next": "16.0.0",
     "next-intl": "^4.3.12",
+    "postcss-preset-mantine": "^1.18.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-intl": "^7.1.14",
@@ -43,8 +46,6 @@
     "@storybook/addon-docs": "^9.1.13",
     "@storybook/addon-links": "^9.1.13",
     "@storybook/nextjs": "^9.1.13",
-    "@tailwindcss/postcss": "^4.1.15",
-    "@tailwindcss/typography": "^0.5.19",
     "@types/negotiator": "^0.6.4",
     "@types/node": "24.9.1",
     "@types/react": "19.2.2",
@@ -52,7 +53,6 @@
     "babel-loader": "^10.0.0",
     "postcss": "^8.5.6",
     "storybook": "^9.1.13",
-    "tailwindcss": "^4.1.15",
     "typescript": "5.9.3",
     "zod": "^4.1.12"
   },
