--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "motion": "^12.23.24",
     "next": "16.0.0",
     "next-intl": "^4.4.0",
-    "postcss-preset-mantine": "^1.18.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-intl": "^7.1.14",
@@ -61,6 +60,8 @@
     "@types/react-dom": "19.2.2",
     "babel-loader": "^10.0.0",
     "postcss": "^8.5.6",
+    "postcss-preset-mantine": "^1.18.0",
+    "postcss-simple-vars": "^7.0.1",
     "storybook": "^9.1.13",
     "typescript": "5.9.3",
     "zod": "^4.1.12"
